# lexclaw

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.cursor/rules/: api-contract-discipline.mdc  no-legal-content-in-cloud.mdc  security-first.mdc  tenant-isolation.mdc  ui-accessibility.mdc
.cursor/skills/: README.md
.cursor/skills/add-legal-skill/: SKILL.md
.cursor/skills/generate-audit-metadata/: SKILL.md
.cursor/skills/harden-webhook-endpoint/: SKILL.md
.cursor/skills/lexclaw-build-pipeline/: SKILL.md
.cursor/skills/lexclaw-deploy/: SKILL.md
.cursor/skills/lexclaw-spec-workflow/: SKILL.md
.github/workflows/: ci.yml
apps/api/: .env.example  openapi.json  pyproject.toml
apps/api/app/: config.py  deps.py  main.py  schemas.py  security.py  store.py
apps/api/migrations/: 001_phase1_foundation.sql  002_phase2_seed_catalog.sql  003_phase3_nodes_and_telemetry.sql  004_phase4_audit_chain_indexes.sql
apps/api/tests/: conftest.py  test_auth.py  test_phase2_api.py  test_phase3_nodes.py  test_phase4_audit.py
apps/onprem-core/: .env.example  cloud_connector.py  legal_skills.py  main.py
apps/web/: package.json
docs/architecture/: phase1-overview.md  system-context.md
docs/compliance/: data-boundary.md
docs/operations/: README.md  day0-day7-playbook.md  phase3-onprem-sync.md  phase4-implementation-report.md  phase4-legal-skills.md
docs/security/: threat-model.md
infra/docker/: Dockerfile.api  Dockerfile.onprem  Dockerfile.web
infra/k8s/: README.md
infra/terraform/: README.md
scripts/: seed.py  setup.ps1
(+22 files in other folders)
