[project]
name = "lexclaw-api"
version = "0.1.0"
description = "LexClaw FastAPI control-plane service"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.115.7",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "python-jose==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "email-validator==2.2.0",
  "bcrypt==4.0.1",
]

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "httpx==0.28.1",
]
